--- a/index.css
+++ b/index.css
@@ -1,177 +1,182 @@
-* {
-    margin:0;
-    padding:0;
-}
 
 body {
+    background-color: #fffefa;
+    padding: 0px;
     margin:0;
-    background-color: rgb(202, 202, 202, 0.5);
-    background-repeat: no-repeat;
-    overflow: hidden;
-    background-size: 30%;
 }
-
-.pen {
-    position: absolute;
-    transform: rotate(90deg);
-    top: 50vh;
-    left: -4%;
-    height: 20%;
-    opacity: 0.6;
-}
-
-#umassimg {
-    position: fixed;
-    width: 18%;
-    bottom: 5%;
-    right: 5%;
-    opacity: 0.7;
-    z-index:10;
-
-}
-.form {
-    width: 80%;
-    height: 90%;
-    margin: auto;
-    padding-top: 0;
-    font-size: 130%;
-    font-family: helvetica;
-    display: flex;
-    flex-direction: column;
-
-}
-
-.form .y {
-    display: none;
-    flex-direction: column;
-    height: 100vh;   
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-.form .y1 {display: inline-block; padding-top: 20vh; padding-bottom: 20vh; box-sizing:border-box;}
-.form .y1a1 {display: none; padding-top: 10vh; padding-bottom: 10vh; box-sizing:border-box;}
-.form .y1a3 {display: none; padding-top: 38vh; padding-bottom: 38vh; box-sizing:border-box;}
-.form .y1a1a1 {display: none; padding-top: 10vh; padding-bottom: 10vh; box-sizing:border-box;}
-.form .y1a1a41 {display: none; padding-top: 10vh; padding-bottom: 10vh; box-sizing:border-box;}
-.form .y1a1a39 {height: 100vh;}
-
-.y label{
-    cursor: pointer;
-}
-
-.y label input{
-    display: none;
-}
-
-.y1a3a, .y1a2a, .writenote {
-    height: 9vh;
-    width: 50%; 
-    background-color: gray;
-    color: black;
-    margin-top: 2vh;
+form div.y {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 125%;
-    font-weight: bold;
-}
-.y1a3a:hover, .y1a2a:hover, .writenote:hover {
-    background-color: rgb(119, 51, 51);
-    color: white;
+    height: 100vh;
+    color:#251100;
 }
 
-.y label span {
+div.intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
+
+div.intro div {
+    background-color: #bd96aa03;
+    margin: 10px;
+    height: 200px;
+    width: 200px;
+    border: 1.5px solid #ac1c6445;
+    font-family:sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #5a0731;
+    font-weight:bold;
+}
+
+div.intro div:hover {
+    background-color: #501230;
+    color:white;
+}
+
+form div.y label span {
+    background-color: #eef1f3;
     position: relative;
-    display: inline-flex;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    align-items:center;
+    font-family: helvetica;
+    width:180px;
+    height: 25px;
+    cursor: pointer;
+    margin-top: 0.3vh;
+    color: #000000;
+    border-radius:2px;
+    border: 1px solid #cdd1d5;
+    font-size: 17px;
+}
+
+form div.y.q2 label span.q2a1q4a1{
+    background-color: #dad0d5;
+    color: #696469;
+    font-weight:bold;
+}
+
+form div.y.q2 label span.q2a1q4a1:hover{
+    background-color: #ac1c64;
+    color:white;
+    font-weight:bold;
+}
+
+form div.y label input {
+    display: none;
+}
+
+
+form div.q1 {
+    display: flex;
+    width: 100vw;
+}
+form div.q1 div h1 {
+    color: #ac1c64;
+    font-family: sans-serif;
     text-align: center;
-    width: 80vw;
-    margin-top:2vh;
-    height: 6.5vh;
-    color: rgb(0, 0, 0);
-    background-color: rgba(255, 255, 255, 0.5);
+
+}
+
+form div.q4 h1 {
+    color: #ac1c64;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+form div.q3 h1 {
+    color: #ac1c64;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+form div.q2 h1 {
+    color: #ac1c64;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+form div.aptime label span {
+    display: inline-block;
+    text-align: center;
+    vertical-align: center;
+    align-items: center;
+    padding-top: 2px;
     box-sizing: border-box;
 }
-.y label input:active ~ span{
-    color: rgb(23, 23, 39);
-    font-weight: bold;
-    background-color: rgba(67, 78, 185, 0.7);
+
+form div.y.q2 {
+    display: flex;
+    flex-direction: column;
+    
 }
 
-.y label input:checked ~ span {
-    color: rgb(24, 24, 27);
-    font-weight: bold;
-    background-color: rgba(206, 208, 235, 0.6);
+
+
+
+
+form div.y label input:hover ~ span {
+    background-color: #989898d6;
+
+
 }
 
-.y label input:hover ~ span {
-    color: rgb(24, 24, 27);
-    font-weight: bold;
-    background-color: rgba(206, 208, 235, 0.6);
+form div.y label input:checked ~ span {
+    background-color: #0091ea;
+   color: white
 }
 
-.y1 label input:checked ~ span {width: 19.08%;}
-.y1 label input:hover ~ span {width: 19.08%;}
-.y1 label span {width: 19.08%;}
 
-.y1a1 label span {height: 10%;}
-.y1a1 label input:hover ~ span {height: 10%;}
-.y1a1 label input:checked ~ span {height: 10%;}
+h3.up {
+    position: fixed;
+    width: 100vw;
+    text-align: center;
+    margin-top: 5vh;
+    color: #8080802b;
+}
 
-.y1a1a1 label input:checked ~ span {width: 49%; height: 8%; background-color: rgb(250, 54, 54, 0.7);}
-.y1a1a1 label input:hover ~ span {width: 49%; height: 8%; background-color: rgb(250, 54, 54, 0.7);}
-.y1a1a1 label span{width: 49%; height: 8%;}
+h3.up:hover{
+    color:gray;
+    cursor:pointer;
+}
 
-.y1a1a41 label span{width:32%; height: 8%} 
-.y1a1a41 label input:hover ~ span{width:32%; height: 8%} 
-.y1a1a41 label input:checked ~ span{width:32%; height: 8%}
 
-.y1a2 label span {
-    height: 9vh;
-    width: 50%; 
-    background-color: gray;
-    color: black;
-    margin-top: 0px;
-    margin: auto;
-    margin-top: 2vh;
+
+
+form div.y div#subbtn {
+    width:200px;
+    height:40px;
+    position: absolute;
+    right: 40px;
+    bottom: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+form div.y input#subbtn {
+   width:180px;
+    height: 25px;
+    background-color: #eef1f3;
+    border-radius:2px;
+    border: 1px solid #cdd1d5;
+    margin: 20px;
+}
+form div.y input#subbtn:hover {
+    background-color: #989898d6;
 
-.y1a2 input:active ~ span{
-    background-color: rgb(119, 51, 51);
-    color: white;
 }
 
-#y1a1a1n, #y1a1a41v {
-    width: 20%;
-    background-color: rgba(61, 61, 94, 0.7);
-    border: 0px solid rgb(18, 18, 37);
-    color: rgb(225, 225, 233);
-    margin-top: 3%;
+form div.y input#subbtn:checked {
+    background-color: #eef1f3;
+    border: 4px solid #2da2e9;
 }
 
-h2 {
-    margin-top: 0vh;
-    margin-bottom: 3vh;
-    color: rgb(24, 34, 83);
-    text-align: center;
-    font-size: 165%;
-    width: 80vw%;
-    padding-top: 0;
-    box-sizing: border-box;
-    overflow: auto;
-    FONT-weight: bold;
+div.test {
+    display: none;
 }
-
-h3 {padding: 10px;}
-
-
-
-p {
-    margin-bottom: 0vh;
-}
-
