--- a/css.css
+++ b/css.css
@@ -52,6 +52,13 @@ div.c2 label input:checked ~ span {
     color:white;
 }
 
+div.c2 h1 {
+    font-size:300%;
+}
+
+div.c2 h2 {
+    font-size: 250%;
+}
 div.c2 span.q1a1 {
     margin-top: 2vh;
 }
@@ -59,7 +66,7 @@ div.c2 span.q1a1 {
 #c1 {
     position: fixed;
     font-family:fantasy;
-    font-size: 400px;
+    font-size: 250%;
     color: #0000001a;
     margin-left: 2vw;
 }
@@ -309,7 +316,7 @@ input {
 }
 
 div.c2 label span {
-    background-color: #4c82751a;
+    background-color: #2d4c45a3;
     position: relative;
     display: flex;
     align-items: center;
@@ -319,9 +326,9 @@ div.c2 label span {
     height:5vh;
     cursor: pointer;
     margin-top: 0.3vh;
-    color: #401212;
+    color: #ffffff;
     border-radius:2px;
-    font-size: 17px;
+    font-size: 150%;
 }
 
 div.c2 label input:hover ~ span {
@@ -344,7 +351,7 @@ div.c2 span.q1a1 {
 #c1 {
     position: fixed;
     font-family:fantasy;
-    font-size: 200%;
+    font-size: 250%;
     color: #0000001a;
     margin-left: 2vw;
 }
@@ -427,4 +434,12 @@ div.c5 {
     padding: 2vh;
     
 
+}
+
+div.b1 select {
+    font-size:200%;
+    text-align:center;
+    padding-left: 2vw;
+    padding-top:0.5vh;
+    padding-bottom:0.5vh;
 }
