--- a/css.css
+++ b/css.css
@@ -410,8 +410,8 @@ form div.c2 div.b1 div.c4 label span {
     width:15vw;
     display:inline-block;
     box-sizing:border-box;
-    padding:1.5vh;
-    color:#000000;
+    padding: 1.1vh;
+    color: #ffffff;
     font-weight: 200;
 }
 
