--- a/css.css
+++ b/css.css
@@ -18,7 +18,7 @@ body {
 }
 
 .mainlink{
-  font-size: 50px;
+  font-size: 4vw;
   width: 20vw;
   height: 20vw;
   border: solid #000054;
@@ -28,6 +28,9 @@ body {
   align-items:center;
   text-decoration:none;
   color: black;
+  padding: 2vw;
+  font-family: monospace;
+  font-weight: 600;
 }
 
 .mainlink:hover {
@@ -318,7 +321,7 @@ select {
  div.b1 {
    width:100vw;
    padding: 0;
-margin-bottom:0;
+   margin-bottom:0;
 }
   div.c2 h2 {
   font-size: 6vw;
