--- a/webflow/css/yonghyun-lees-five-star-project.webflow.css
+++ b/webflow/css/yonghyun-lees-five-star-project.webflow.css
@@ -263,9 +263,16 @@
 }
 
 .text-field {
-  width: 70%;
-  color: #4b4b4b;
-  font-size: 25px;
+  width: 80%;
+  height: 70px;
+  max-width: 450px;
+  min-width: 100px;
+  border: 1px none #000;
+  border-radius: 5px;
+  background-color: hsla(0, 0%, 100%, 0.83);
+  font-family: 'Font awesome 5 free solid 900', sans-serif;
+  color: #3e8d15;
+  font-size: 35px;
   text-align: center;
 }
 
@@ -384,6 +391,7 @@
   color: #222;
   font-size: 1.7em;
   text-align: center;
+  text-decoration: none;
 }
 
 .button {
@@ -754,6 +762,7 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  border-radius: 8px;
 }
 
 .c3:hover {
@@ -829,6 +838,119 @@
 .paragraph-3 {
   color: #7c7c7c;
   text-align: center;
+}
+
+.link-block {
+  text-decoration: none;
+}
+
+.div-block-7 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.button-3 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.33);
+  box-shadow: 4px 4px 3px 0 rgba(0, 0, 0, 0.33);
+  -webkit-transition: box-shadow 100ms ease;
+  transition: box-shadow 100ms ease;
+  color: #141233;
+  font-size: 35px;
+  text-align: center;
+}
+
+.button-3:active {
+  box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.33);
+}
+
+.submit-button-3 {
+  width: 200px;
+  height: 60px;
+  margin-top: 14px;
+  border-radius: 5px;
+  background-color: rgba(31, 93, 148, 0.76);
+}
+
+.div-block-9 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.text-span-3 {
+  text-shadow: 1px 1px 6px #000;
+  white-space: normal;
+}
+
+.button-4 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 149px;
+  height: 60px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 43px;
+  background-color: #105517;
+  font-family: 'Font awesome 5 free solid 900', sans-serif;
+  color: #fff;
+  font-size: 30px;
+}
+
+.button-4:active {
+  background-color: #1fa02c;
 }
 
 @media screen and (max-width: 991px) {
@@ -1017,11 +1139,12 @@
   }
   .heading {
     margin-top: 0px;
-    margin-bottom: 15px;
-    padding: 10px 12px;
+    margin-bottom: 0px;
+    padding: 5px 12px;
     background-color: hsla(0, 0%, 100%, 0.09);
-    font-size: 0.9em;
-    line-height: 1.3em;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.3em;
+    line-height: 1em;
     text-align: center;
   }
   .radio-button-field {
@@ -1029,9 +1152,16 @@
     height: 20vw;
   }
   .text-field {
-    width: 95%;
-    height: 40px;
-    font-size: 20px;
+    width: 80vw;
+    height: 70px;
+    margin-bottom: 5vw;
+    padding-bottom: 4px;
+    border-radius: 5px;
+    background-color: hsla(0, 0%, 100%, 0.81);
+    font-family: 'Font awesome 5 free solid 900', sans-serif;
+    color: #3e8d15;
+    font-size: 10vw;
+    font-weight: 400;
   }
   .text-block {
     height: 19px;
@@ -1041,7 +1171,15 @@
     height: 100vh;
   }
   .heading-2 {
-    font-size: 0.9em;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: hsla(0, 0%, 100%, 0.84);
+    color: #06200c;
+    font-size: 1.4em;
+    text-align: center;
+    text-decoration: none;
   }
   .button {
     display: block;
@@ -1152,9 +1290,76 @@
   .sbm {
     width: 95vw;
     height: 30px;
+    margin-top: 10px;
     padding-top: 0px;
     padding-bottom: 0px;
     font-size: 17px;
+  }
+  .link-block {
+    margin-bottom: 20px;
+    text-decoration: none;
+  }
+  .div-block-7 {
+    width: 90%;
+  }
+  .button-3 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 23vw;
+    height: 23vw;
+    margin: 10px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-style: none;
+    border-width: 2px;
+    border-color: #4560b9;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.51);
+    box-shadow: 4px 4px 3px 0 rgba(0, 0, 0, 0.42);
+    -webkit-transition: box-shadow 100ms ease;
+    transition: box-shadow 100ms ease;
+    color: #132b46;
+    font-size: 10vw;
+  }
+  .button-3:active {
+    box-shadow: 1px 0 3px 0 rgba(0, 0, 0, 0.59);
+  }
+  .div-block-8 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 95vw;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .submit-button-3 {
+    width: 210px;
+    height: 50px;
+    margin-top: 6vw;
+    border-radius: 5px;
+    background-color: rgba(31, 93, 148, 0.76);
+    -webkit-transition: box-shadow 100ms ease;
+    transition: box-shadow 100ms ease;
+  }
+  .button-4 {
+    width: 106px;
+    height: 70px;
+    font-size: 25px;
   }
 }
 
