--- a/webflow/css/yonghyun-lees-five-star-project.webflow.css
+++ b/webflow/css/yonghyun-lees-five-star-project.webflow.css
@@ -579,12 +579,12 @@
   -ms-flex-align: center;
   align-items: center;
   border-radius: 3px;
-  background-color: hsla(0, 0%, 100%, 0.14);
+  background-color: hsla(0, 0%, 100%, 0.43);
   box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.27);
   -webkit-transition: background-color 400ms ease, box-shadow 600ms ease;
   transition: background-color 400ms ease, box-shadow 600ms ease;
   color: #3d3d3d;
-  font-size: 23px;
+  font-size: 21px;
 }
 
 .radio-button-label-3:hover {
@@ -726,6 +726,8 @@
 }
 
 .b1 {
+  position: relative;
+  z-index: 3;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -810,8 +812,8 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
-  height: 0px;
+  width: 100vw;
+  height: 100vh;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -953,6 +955,223 @@
   background-color: #1fa02c;
 }
 
+.div-block-10 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 40vw;
+  height: auto;
+  margin-top: 0px;
+  margin-bottom: 8px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: rgba(255, 166, 0, 0.38);
+}
+
+.text-block-4 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30vw;
+  height: 50px;
+  margin-bottom: 0px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #fff;
+  color: red;
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.div-block-11 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 27vw;
+  height: 100px;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  background-color: #9dbee4;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+}
+
+.div-block-12 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30vw;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: #fff;
+}
+
+.div-block-13 {
+  width: 30vw;
+  min-height: 120px;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  background-color: #fff;
+  font-size: 23px;
+  line-height: 30px;
+}
+
+.heading-4 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80vw;
+  height: 102px;
+  margin-bottom: 0px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
+}
+
+.text-block-5 {
+  padding-top: 5px;
+  padding-left: 5px;
+  background-color: #fff;
+  font-family: 'Font awesome 5 free solid 900', sans-serif;
+  font-size: 28px;
+}
+
+.div-block-15 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30vw;
+}
+
+.image-2 {
+  position: absolute;
+  left: -306px;
+  z-index: 0;
+  width: 100vw;
+  background-color: transparent;
+}
+
+.b3 {
+  position: relative;
+  z-index: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80vw;
+  height: 80vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 6px;
+  background-color: hsla(41, 0%, 100%, 0);
+}
+
+.image-3 {
+  position: absolute;
+  z-index: 0;
+  width: auto;
+  height: 100vh;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.b3-copy {
+  position: relative;
+  z-index: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80vw;
+  height: 80vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 6px;
+  background-color: hsla(41, 0%, 100%, 0);
+}
+
+.textarea {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
+  border: 0px none #000;
+  text-align: center;
+}
+
 @media screen and (max-width: 991px) {
   .b2 {
     width: 90vw;
@@ -996,6 +1215,24 @@
   .b1 {
     width: 90vw;
     background-color: hsla(0, 0%, 100%, 0.47);
+  }
+  .div-block-10 {
+    width: 60vw;
+  }
+  .text-block-4 {
+    width: 50vw;
+  }
+  .div-block-11 {
+    width: 48vw;
+  }
+  .div-block-12 {
+    width: 50vw;
+  }
+  .div-block-13 {
+    width: 50vw;
+  }
+  .div-block-14 {
+    width: 50vw;
   }
 }
 
@@ -1097,7 +1334,7 @@
   }
   .radio-button-label-3 {
     width: 70vw;
-    height: 35px;
+    height: 30px;
     margin-top: 3px;
     font-size: 0.8em;
   }
@@ -1124,6 +1361,41 @@
   .b1 {
     width: 95vw;
     height: 100vh;
+  }
+  .div-block-10 {
+    width: 80vw;
+    height: auto;
+    margin-top: 0px;
+    margin-bottom: 2px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  .text-block-4 {
+    width: 70vw;
+    height: 25px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    font-size: 20px;
+  }
+  .div-block-11 {
+    width: 68vw;
+    height: 60px;
+    padding-top: 1px;
+    font-size: 18px;
+  }
+  .div-block-12 {
+    width: 70vw;
+  }
+  .div-block-13 {
+    width: 70vw;
+    height: 76px;
+    padding-top: 1px;
+    font-size: 20px;
+  }
+  .heading-4 {
+    width: 90vw;
+    height: 42px;
+    font-size: 24px;
   }
 }
 
@@ -1232,6 +1504,7 @@
     margin-top: 0px;
     padding-top: 10px;
     padding-bottom: 10px;
+    background-color: hsla(0, 0%, 100%, 0.67);
     font-size: 16px;
     text-align: center;
   }
@@ -1360,6 +1633,105 @@
     width: 106px;
     height: 70px;
     font-size: 25px;
+  }
+  .div-block-10 {
+    width: 95vw;
+    height: auto;
+    margin-top: 5px;
+    margin-bottom: 21px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  .text-block-4 {
+    width: 85vw;
+    height: 35px;
+    padding-left: 3px;
+    font-size: 21px;
+  }
+  .div-block-11 {
+    width: 80vw;
+    height: auto;
+    min-height: 80px;
+    font-size: 21px;
+    line-height: 21px;
+  }
+  .div-block-12 {
+    width: 85vw;
+  }
+  .div-block-13 {
+    width: 85vw;
+    height: auto;
+    min-height: 100px;
+    font-size: 22px;
+    line-height: 22px;
+  }
+  .heading-4 {
+    width: 92vw;
+    height: 67px;
+    font-size: 24px;
+    line-height: 34px;
+    text-align: center;
+  }
+  .div-block-14 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 85vw;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
+  .text-block-5 {
+    height: 35px;
+    margin-top: 0px;
+    padding-top: 5px;
+    padding-left: 5px;
+    background-color: #fff;
+    font-family: 'Font awesome 5 free solid 900', sans-serif;
+    font-size: 27px;
+    font-weight: 400;
+  }
+  .div-block-15 {
+    padding-top: 0px;
+  }
+  .image-2 {
+    position: absolute;
+    z-index: 1;
+    width: auto;
+    height: 100vh;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+  .b3 {
+    z-index: 2;
+    width: 100vw;
+    border-radius: 0px;
+    background-color: hsla(41, 0%, 100%, 0.85);
+  }
+  .image-3 {
+    left: 0px;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+  .b3-copy {
+    z-index: 2;
+    width: 100vw;
+    border-radius: 0px;
+    background-color: hsla(41, 0%, 100%, 0.85);
+  }
+  .heading-5 {
+    font-size: 35px;
+    text-align: center;
+  }
+  .heading-5.k {
+    color: #100d49;
+    font-size: 21px;
+    line-height: 28px;
   }
 }
 
