--- a/webflow/css/yonghyun-lees-five-star-project.webflow.css
+++ b/webflow/css/yonghyun-lees-five-star-project.webflow.css
@@ -1167,6 +1167,19 @@
   text-align: center;
 }
 
+.checkbox-label-2 {
+  font-size: 30px;
+}
+
+.checkbox-2 {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  border-style: none;
+  border-width: 1px;
+  border-color: rgba(82, 69, 69, 0);
+}
+
 @media screen and (max-width: 991px) {
   .b2 {
     width: 90vw;
@@ -1555,7 +1568,7 @@
   }
   .sbm {
     width: 95vw;
-    height: 30px;
+    height: 45px;
     margin-top: 10px;
     padding-top: 0px;
     padding-bottom: 0px;
@@ -1725,6 +1738,33 @@
     color: #100d49;
     font-size: 21px;
     line-height: 28px;
+  }
+  .checkbox-label-2 {
+    font-size: 18px;
+  }
+  .checkbox-2 {
+    width: 15px;
+    height: 15px;
+    margin-top: 0px;
+  }
+  .checkbox-field-2 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 
