--- a/webflow/css/yonghyun-lees-five-star-project.webflow.css
+++ b/webflow/css/yonghyun-lees-five-star-project.webflow.css
@@ -1419,7 +1419,7 @@
   }
   .heading {
     margin-top: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
     padding: 5px 12px;
     background-color: hsla(0, 0%, 100%, 0.09);
     font-family: 'Open Sans', sans-serif;
@@ -1513,7 +1513,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: hsla(0, 0%, 100%, 0.67);
-    font-size: 16px;
+    font-size: 20px;
     text-align: center;
   }
   .paragraph-2 {
@@ -1531,7 +1531,7 @@
     display: -ms-flexbox;
     display: flex;
     width: 95vw;
-    height: 60px;
+    height: auto;
     min-height: 60px;
     margin-top: 5px;
     margin-bottom: 0px;
@@ -1549,7 +1549,7 @@
     -webkit-transition: box-shadow 600ms ease, background-color 400ms ease;
     transition: box-shadow 600ms ease, background-color 400ms ease;
     color: #3d3d3d;
-    font-size: 16px;
+    font-size: 20px;
   }
   .checkbox-label:hover {
     box-shadow: 4px 4px 3px 0 rgba(0, 0, 0, 0.27);
